# mmm_utils

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.claude/: settings.json
examples/: app.py  mmm_fit_example.ipynb  mmm_simulation.py  model_examples.py  plotting.py  synthetic_mm_data.csv
examples/pages/: 1_Fit_MMM.py
logs/: MMM_ANTOINE_2026_0626T14h13m40s_853284Z.json  MMM_ANTOINE_2026_0626T14h39m34s_986257Z.json
mmm_utils/: __init__.py  data_logger.py  holidays.py  meteo.py  modeling_fct.py  optimize.py  plot.py  post_modeling.py  timeline.py  utils.py
mmm_utils/modeling/: __init__.py  adstocks.py  mmm.py  mmm_config.py  prior.py  saturation.py  seasonality.py  transform.py  transform_handler.py  utils.py
mmm_utils/modeling/model_definition/: __init__.py  beta_priors.py  formulae.py  mmm_config.py
mmm_utils/optimizer/: __init__.py  optimizer.py  optimizer_utils.py
tests/: test_beta_priors.py  test_compute_groups.py  test_interaction.py  test_interaction_formula.py
