[project]
name = "mmm-utils"
version = "0.1.0"
description = ""
authors = [
    {name = "antoine-caillebotte",email = "caillebotte.antoine@cospirit.com"}
]
requires-python = ">=3.12, <3.15"
dependencies = [
    "pymc-marketing (>=0.19.3,<0.20.0)",
    "jax (>=0.10.0,<0.11.0)",
    "blackjax (>=1.5,<2.0)",
    "fastprogress (>=1.1.6,<2.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
]

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "mypy (>=1.20.2,<2.0.0)",
    "pylint (>=4.0.5,<5.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "graphviz (>=0.21,<0.22)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
