[project]
name = "mmm-utils"
version = "0.1.0"
description = ""
authors = [
    {name = "antoine-caillebotte",email = "caillebotte.antoine@cospirit.com"}
]
requires-python = ">=3.12, <3.15"
dependencies = [
    "jax (>=0.10.0,<0.11.0)",
    "blackjax (>=1.5,<2.0)",
    "fastprogress (>=1.1.6,<2.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "vacances-scolaires-france (>=0.11.0,<0.12.0)",
    "holidays (>=0.96,<0.97)",
    "numpyro (>=0.21.0,<0.22.0)",
    "pytensor (>=3.0.7,<4.0.0)",
    "pymc (>=6.0.1,<7.0.0)",
    "pyprojroot (>=0.3.0,<0.4.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "meteostat (>=2.1.4,<3.0.0)",
]

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "mypy (>=1.20.2,<2.0.0)",
    "pylint (>=4.0.5,<5.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "graphviz (>=0.21,<0.22)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
