[project]
name = "mmm-utils"
description = ""
authors = [
    {name = "antoine-caillebotte",email = "caillebotte.antoine@cospirit.com"}
]
requires-python = ">=3.12, <3.15"
dependencies = [
    "vacances-scolaires-france (>=0.11.0,<0.12.0)",
    "holidays (>=0.96,<0.97)",
    "pytensor (>=3.0.7,<4.0.0)",
    "pymc (>=6.0.1,<7.0.0)",
    "pyprojroot (>=0.3.0,<0.4.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "meteostat (>=2.1.4,<3.0.0)",
    "cloudpickle (>=3.1.2,<4.0.0)",
    "pandas (>=3.0.5,<4.0.0)",
    "xarray (>=2026.7.0,<2027.0.0)",
    "arviz (>=1.2.0,<2.0.0)",
    "scipy (>=1.18.0,<2.0.0)",
    "numpy (>=2.0,<2.5)",
    "pymongo (>=4.17.0,<5.0.0)",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "mypy (>=1.20.2,<2.0.0)",
    "pylint (>=4.0.5,<5.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "graphviz (>=0.21,<0.22)",
    "pytest (>=9.1.1,<10.0.0)",
    "pymongo (>=4.17.0,<5.0.0)",
    "plotly (>=6.8.0,<7.0.0)",
    "ipywidgets (>=8.1.8,<9.0.0)",
    "deptry (>=0.25.1,<0.26.0)",
]


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
version = "0.0.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true
